# health_subreddit_small

./: .gitignore  classification_report_pubmed.csv  classification_report_semmed.csv  cleaning.ipynb  evaluation.py  main.py  preprocess.ipynb  pubmed_verifier.py  pyproject.toml  test.ipynb  triples.py  umls_linker.py  umls_linker_scispacy.py
dataset/100k_dataset/: data_extraction_big.py  triples_86k.py
ground_truth/: ground_truth_creation.py
notebooks/: preprocess.ipynb  test.ipynb
pubmed_verifier/: pubmed_verifier.py
reddit-health-cleaned/: dataset_info.json  state.json
reddit-health-small-sapbert-full/: dataset_info.json  state.json
semmed_verifier/: claim_unification.py  semmed_checker.py
triples_output_cleaned/: dataset_info.json  state.json
umls_verifier/: sapbert_linker.py  umls_api.py  umls_linker_scispacy.py
